Fix z-index

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,5 +1,5 @@
 .header {
-  z-index: 1;
+  z-index: 1000;
   position: sticky;
   top: 0px;
 
