--- a/scss/product/style.css
+++ b/scss/product/style.css
@@ -130,7 +130,7 @@ table {
 }
 
 .header {
-  z-index: 1;
+  z-index: 1000;
   position: sticky;
   top: 0px;
 }
